--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
+
+        <!-- video.js -->
+        <link rel="stylesheet" href="/video-js-5.19.2/video-js.css"/>
+        <script src="/video-js-5.19.2/video.js"></script>
+        <script src="/video-js-5.19.2/videojs-contrib-hls4.js"></script>        
     </head>
     <body class="skin-green sidebar-mini">
         <div id="app"></div>
